--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "3.0.2",
+    "bcrypt": "3.0.6",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "jsonwebtoken": "8.5.1",
     "mongoose": "5.7.13",
     "mongoose-unique-validator": "2.0.3",
     "morgan": "1.9.1"
