--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "3.0.6",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "google-auth-library": "5.7.0",
     "jsonwebtoken": "8.5.1",
     "mongoose": "5.7.13",
     "mongoose-unique-validator": "2.0.3",
