--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "3.0.6",
+    "cors": "2.8.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "google-auth-library": "5.7.0",
